--- a/publish.yaml
+++ b/publish.yaml
@@ -1,8 +1,8 @@
 Type: Component
-Name: devscomp/lambda
+Name: shaoyun/lambda
 Provider:
   - AWS
-Version: 1.0.0
+Version: 1.0.2
 Description: 快速部署 Lambda 到 AWS
 HomePage: https://github.com/Serverless-Devs-Awesome/lambda-aws-component
 Tags:
